source/styles/blocks/card.less
.card {
  background-color: @white;
  width: 40%;
  margin: 0 2.5% 23px 0;
  padding: 20px 20px 25px 64px;
  flex-shrink: 0;
  position: relative;
  border: 1px solid @bg-color-button;
}

.card:nth-child(2n) {
  margin-right: 0px;
}

.card-checkbox {
  position: absolute;
  top: 105px;
  left: 23px;
}

.card-header {
  display: flex;
  align-items: flex-start;
  margin: 0 0 4px;
}

.card-header__price {
  color: @red;
  font-size: 15px;
  line-height: 20px;
  font-weight: bold;
  margin: 4px 19px 0 0;
}

.card-name {
  width: 70%;
  font-weight: normal;
  margin: 0 0 14px;
  min-height: 42px;
}

.card-name > span {
  color: @dark-grey;
}

.card-label {
  position: relative;
  right: -20px;
  margin: 0 0 0 auto;
  padding: 6px 10px 6px 8px;
  background-color: @light-grey;
  color: @grey;
  display: flex;
  align-items: center;
  max-width: 160px;
}

.card-label__circle {
  width: 6px;
  height: 6px;
  border-radius: 100%;
  display: inline-block;
  background-color: @grey;
  margin: 0 10px 0 0;
}

.card-label.card-label--red {
  background-color: @bg-red-label;
  color: @color-red-label;
}

.card-label--red .card-label__circle {
  background-color: @color-red-label;
}

.card-label.card-label--blue {
  background-color: @bg-blue-label;
  color: @color-blue-label;
}

.card-label--blue .card-label__circle {
  background-color: @color-blue-label;
}

.card-label.card-label--disabled {
  background-color: @bg-disabled-label;
  color: @color-disabled-label;
}

.card-label--disabled .card-label__circle {
  background-color: @color-disabled-label;
}

.card-content {
  display: flex;
}

.flat-description {
  width: 60%;
  flex-shrink: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.info-text {
  color: @dark-grey;
  margin: 0 3px 0 0;
}

.card-header__type {
  box-shadow: 0px 0px 2px rgba(94, 119, 157, 0.25);
  border-radius: 32px;
  padding: 5px 17px 5px 37px;
  position: relative;
}

.flat-address {
  position: relative;
  margin-top: auto;
}

.flat-address::before {
  content: "";
  width: 13px;
  height: 13px;
  position: absolute;
  top: 5px;
  left: -20px;
  background: url("../img/location.svg") no-repeat center;
  background-size: contain;
}

.block-checkbox {
  position: relative;
  margin: 0 8px 0 24px;
}

.block-checkbox label {
  display: flex;
}

.info {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  width: 40%;
  flex-shrink: 0;
}

.info img {
  width: 127px;
  height: 100px;
  object-fit: contain;
  margin: -30px 3px 16px 0;
}

.tooltip {
  position: absolute;
  display: none;
  color: @white;
  box-shadow: 0px 8px 30px -3px rgba(26, 32, 44, 0.1), 0px 4px 6px -2px rgba(26, 32, 44, 0.05);
  background-color: @tooltip-color;
  opacity: 0.8;
  width: 214px;
  z-index: 2;
  top: 38px;
  left: 31px;
  padding: 13px 15px 10px 18px;
}

.tooltip::before {
  content: "";
  border: 9px solid transparent;
  border-bottom: 8px solid rgba(0,0,0,0.8);
  position: absolute;
  top: -16px;
  left: 8px;
}

.card-header__type {
  cursor: pointer;
}

.card-header__type:hover .tooltip {
  display: block;
}

.card-header__type--parking::before {
  content: '';
  width: 16px;
  height: 14px;
  background: url("../img/car-icon.svg") no-repeat center;
  background-size: contain;
  position: absolute;
  top: 6px;
  left: 13px;
}

.card-header__type--flat::before {
  content: '';
  width: 13px;
  height: 11px;
  background: url("../img/floor-plan.svg") no-repeat center;
  background-size: contain;
  position: absolute;
  top: 8px;
  left: 15px;
}

